Make range work with spells, add a warning when a spell is cast over range.

--- a/betterrolls-swade2/lang/en.json
+++ b/betterrolls-swade2/lang/en.json
@@ -231,6 +231,7 @@
     "BRSW.OR.NPCDontUseEncumbrance": "Encumbrance penalties are not applied to NPCs",
     "BRSW.OR.RiftsGrittyDamage": "Mega Damage causes gritty damage",
     "BRSW.OverExtremeRange": "Over extreme range",
+    "BRSW.SpellOverRange": "Spell casted over maximum range",
     "BRSW.PopoutChat": "Auto Pop Out Chat",
     "BRSW.PopoutChatHint": "When checked, chat cards are automatically popped out for the relevant user when they are created",
     "BRSW.PowerModifiers-": "Power Modifiers - ",
